# growing_balls

./: CMakeLists.txt
src/: growing_balls.cpp
src/algorithms/: eliminationorder.h  spatialhelper.h
src/io/: io.cpp
src/primitives/: pointofinterest.cpp  pointofinterest.h
src/storage/: datastorage.h
